2012-04-10 Stanislas Rolland  <typo3@sjbr.ca>
	* Follow-up 1 to feature #35805: Require system extension adodb
	* Follow-up 9 to feature #34447: Do not show tx_srfeuserregister_password in HTML source
	* Follow-up to #15174 (old bug tracker): Incorrect test of absence of required value
	* Fix bug #35833: Password update on accepting invitation may not work
	* Follow-up 2 to feature #35805: Write error to syslog if required extension is not loaded
	* Follow-up 3 to feature #35805: Always use adodb Date library for timestamp conversion
	
2012-04-09 Stanislas Rolland  <typo3@sjbr.ca>
	* Fix bug #15174 (old bug tracker): Doesn't allow update of user group
	* Fix bug #10435 (old bug tracker): Error messages when country is changed while no user group is selected in frontend
	* Cleanup line breaks in rsaauth.js
	* Fix bug #14020 (old bug tracker): user groups from userGroupAfterConfirmation are visible in the invitation form
	* Fix bug #13913 (old bug tracker): Login through email-link overwrites usergroup settings
	* Cleanup: Add tx_srfeuserregister_pi1_adodb_time to ext_autoload
	* Add feature #35805: Use ADOdb Date Library from system extension adodb

2012-04-08 Stanislas Rolland  <typo3@sjbr.ca>
	* Add feature #28370: replyTo feature for mails sent to user
	* Add feature #6168 (old bug tracker): Support itemsProcFunc property of TCA select and radio fields (Thanks to Jeff Segars)
	* Fix bug #12795 (old bug tracker): Default setup damages valid e-mail adresses
	* Fix bug #13765 (old bug tracker): Attachment file is attached to the administrative review email
	* Follow-up 8 to feature #34447: Add ###LABEL_NEW_PASSWORD### on ###TEMPLATE_EDIT###
	* Fix bug #35786: JavaScript files are not versioned
	* Fix bug #16658 (old bug tracker): amp htmlspecialchars_decode doesn't work in 2.6.1
	* Fix bug #14739 (old bug tracker): htmlspecialchars_decode doesn't work

2012-04-07 Stanislas Rolland  <typo3@sjbr.ca>