@@ -15,7 +15,7 @@ $EM_CONF[$_EXTKEY] = array(
 	'description' => 'A self-registration variant of Kasper Skårhøj\'s Front End User Admin extension.',
 	'category' => 'plugin',
 	'shy' => 0,
-	'dependencies' => 'cms,felogin,saltedpasswords,rsaauth,static_info_tables,div2007',
+	'dependencies' => 'cms,felogin,saltedpasswords,rsaauth,adodb,static_info_tables,div2007',
 	'conflicts' => 'germandates,rlmp_language_detection,newloginbox,kb_md5fepw,srfeuserregister_t3secsaltedpw',
 	'priority' => '',
 	'loadOrder' => '',
